# vuglang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.MD
src/: CMakeLists.txt  Main.cpp  pch.hpp
src/AST/: ASTNodes.hpp  ASTNodesForward.hpp  ASTWalker.hpp  CMakeLists.txt
src/AST/Nodes/: Declaration.hpp  Expression.hpp  Node.hpp  Statement.hpp
src/AST/Nodes/Declarations/: DeclarationsBlock.hpp  FunctionDeclaration.hpp  FunctionParameter.hpp  ModuleDeclaration.hpp
src/AST/Nodes/Expressions/: BinaryOperation.hpp  CallFunction.hpp  Identifier.hpp  Number.hpp  PrefixOperation.hpp
src/AST/Nodes/Statements/: Assign.hpp  Break.hpp  ExpressionStatement.hpp  If.hpp  LocalVariableDeclaration.hpp  Print.hpp  Return.hpp  StatementsBlock.hpp  While.hpp
src/Codegen/: CMakeLists.txt  LLVMCodegen.cpp  LLVMCodegen.hpp  LLVMDeclarationCodegen.cpp  LLVMDeclarationCodegen.hpp  LLVMDefinitionCodegen.cpp  LLVMDefinitionCodegen.hpp
src/Diagnostic/: CMakeLists.txt  Diagnostic.cpp  Diagnostic.hpp  DiagnosticManager.cpp  DiagnosticManager.hpp  DiagnosticPrinter.hpp  Logger.hpp
src/Evaluator/: CMakeLists.txt  Evaluator.cpp  Evaluator.hpp
src/Evaluator/Objects/: BooleanObject.hpp  IntegerObject.hpp  Object.hpp
src/Lexing/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Token.hpp
src/Misc/: CMakeLists.txt  Printer.cpp  Printer.hpp  SourceManager.cpp  SourceManager.hpp  Stack.cpp  Stack.hpp
src/Parsing/: CMakeLists.txt  Parser.cpp  Parser.hpp
src/Semantic/: CMakeLists.txt  Symbol.hpp  SymbolContext.cpp  SymbolContext.hpp  SymbolTable.cpp  SymbolTable.hpp  Type.cpp  Type.hpp
src/Semantic/Passes/: GlobalScopePass.cpp  GlobalScopePass.hpp  LocalScopePass.cpp  LocalScopePass.hpp  ModuleDefinitionPass.cpp  ModuleDefinitionPass.hpp
src/Semantic/Types/: BooleanType.cpp  BooleanType.hpp  IntegerType.cpp  IntegerType.hpp  PrimitiveType.cpp  PrimitiveType.hpp  Type.cpp  Type.hpp  UndefinedType.cpp  UndefinedType.hpp
